--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
        "not safari < 10",
       "not chrome < 51",
       "not android < 5",
-      "not ie < 12",
+      "not ie < 12"
     ],
     "development": [
       "last 1 chrome version",
